# stm32pio

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TODO.md  azure-pipelines.yml  miscs.py  pyproject.toml  scratch.py  scratch2.py  settings.py  setup.cfg  setup.py  stm32pio.py  tests.py  util.py
.github/ISSUE_TEMPLATE/: bug_report.md
Apple/: Apple.ioc
CI/: lockfile.yml  setup_test_env.py  tests_runner.py
Orange/: Orange.ioc
Peach/: Peach.ioc
docs/: CONFIG.md
docs/CLI/: COMMANDS.md
docs/GUI/: README.md
docs/gui/: README.md
docs/logging/: logging.drawio  schema_cli.drawio
examples/: README.md  embedding.py
examples/cli/: README.md
examples/embedding/: README.md  embedding.py
screenshots/: logo.drawio  stm32pio.drawio
stm32pio/: __init__.py  __main__.py  app.py  lib.py  settings.py  stm32pio.py  tests.py  util.py
stm32pio-gui/: README.md  app.py  main.qml  main_.qml
stm32pio-gui/icons/: LICENSE
stm32pio-test/: stm32pio-test.ioc
stm32pio-test-project/: stm32pio-test-project.ioc
stm32pio/cli/: __main__.py  app.py
stm32pio/core/: clean.py  config.py  cubemx.py  lib.py  log.py  logging.py  pio.py  project.py  settings.py  state.py  util.py  validate.py
stm32pio/gui/: __main__.py  app.py  list.py  log.py  main.qml  project.py  settings.py  util.py
stm32pio/tests/: __init__.py  test.py
stm32pio_gui/: README.md  __main__.py  app.py  main.qml
tests/: common.py  plant_multiple_fixtures.py  setup_fixtures.py  test.py  test_cli.py  test_gui.py  test_integration.py  test_unit.py
(+18 files in other folders)
