[metadata]
name = stm32pio
author = ussserrr
author_email = andrei4.2008@gmail.com
description = Small cross-platform Python app that can create and update PlatformIO projects from STM32CubeMX .ioc files. It uses STM32CubeMX to generate a HAL-framework-based code and alongside creates PlatformIO project with compatible parameters to stick them both together
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
url = https://github.com/ussserrr/stm32pio
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Natural Language :: English
    Topic :: Software Development :: Embedded Systems
keywords =
    platformio
    stm32cubemx
    stm32
    cubemx

[options]
python_requires = >=3.6,
setup_requires =
    wheel
    setuptools_scm
include_package_data = True
packages = find_namespace:

[options.packages.find]
include = stm32pio.*

[options.extras_require]
GUI = PySide2 >= 5.14.2.3, != 5.15.0, != 5.15.0.*, != 5.15.1, != 5.15.1.*, >= 5.15.2

[options.entry_points]
console_scripts = stm32pio = stm32pio.cli.app:main
gui_scripts = stm32pio_gui = stm32pio.gui.app:main [GUI]
